--- a/homepage.html
+++ b/homepage.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevOps - Homepage</title>
+    <!-- Linking CSS Files -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Favicon -->
     <link rel="icon" href="logo.jpg" type="image/x-icon">
 </head>
+
 <body class="main">
+    <!-- Navigation Bar -->
     <div class="nav">
         <img src="https://i.ibb.co/SdFFbYD/logo.jpg" alt="logo" border="0">
         <img src="https://i.ibb.co/Z2VPP5J/Asset-1-8.png" alt="Asset-1-8" border="0" class="logo">
         <a class="active" href="./homepage.html">Home</a>
-        <a href="./products.html">products</a>
+        <a href="./products.html">Products</a>
         <a href="./deals.html">Deals</a>
         <a href="./contact.html">Contact</a>
         <a href="./about.html">About</a>
+        <!-- Search Bar -->
         <input type="text" placeholder="Search..">
     </div>
+
+    <!-- Main Content -->
     <div class="content">
+        <!-- Promotion Section -->
         <div class="promo">
             <img src="https://i.ibb.co/NsQ0GMh/deals.jpg" alt="deals" border="0">
         </div>
+
+        <!-- Product Grid -->
         <div class="grid-container">
-            <!-- Electronics -->
+            <!-- Electronics Section -->
             <div class="grid-item">
                 <img src="https://i.ibb.co/Ms7NqHV/1.jpg" alt="1" border="0">
                 <h2>UltraFast Laptop</h2>
@@ -34,13 +45,15 @@
                 <a href="./checkout.html"><button>Buy Now</button></a>
             </div>
             <div class="grid-item">
-                <img src="https://i.ibb.co/R7vyvdw/2.jpg" alt="2" border="0">                <h2>Smartphone X Pro</h2>
+                <img src="https://i.ibb.co/R7vyvdw/2.jpg" alt="2" border="0">
+                <h2>Smartphone X Pro</h2>
                 <p>The latest Smartphone X Pro with an exceptional camera and long battery life.</p>
                 <span>$799<sup>99</sup></span>
                 <a href="./checkout.html"><button>Buy Now</button></a>
             </div>
             <div class="grid-item">
-                <img src="https://i.ibb.co/t2fVhwG/3.jpg" alt="3" border="0">                <h2>TabMaster 10</h2>
+                <img src="https://i.ibb.co/t2fVhwG/3.jpg" alt="3" border="0">
+                <h2>TabMaster 10</h2>
                 <p>The new TabMaster 10 with a stunning display and powerful processor for all your needs.</p>
                 <span>$499<sup>99</sup></span>
                 <a href="./checkout.html"><button>Buy Now</button></a>
@@ -59,7 +72,8 @@
                 <span>$149<sup>99</sup></span>
                 <a href="./checkout.html"><button>Buy Now</button></a>
             </div>
-            <!-- Appliances -->
+
+            <!-- Appliances Section -->
             <div class="grid-item">
                 <img src="https://i.ibb.co/TPCfG5N/6.jpg" alt="6" border="0">
                 <h2>Compact Microwave</h2>
@@ -95,7 +109,8 @@
                 <span>$75<sup>00</sup></span>
                 <a href="./checkout.html"><button>Buy Now</button></a>
             </div>
-            <!-- Clothes -->
+
+            <!-- Clothes Section -->
             <div class="grid-item">
                 <img src="https://i.ibb.co/DbgxFns/11.jpg" alt="11" border="0">
                 <h2>Stylish Leather Jacket</h2>
@@ -131,7 +146,8 @@
                 <span>$60<sup>00</sup></span>
                 <a href="./checkout.html"><button>Buy Now</button></a>
             </div>
-            <!-- More Electronics -->
+
+            <!-- More Electronics Section -->
             <div class="grid-item">
                 <img src="https://i.ibb.co/ZgF5071/16.jpg" alt="16" border="0">
                 <h2>HD Digital Camera</h2>
@@ -168,7 +184,9 @@
                 <a href="./checkout.html"><button>Buy Now</button></a>
             </div>
         </div>
-    </div>     
+    </div>
+
+    <!-- Footer Section -->
     <section class="footer">
         <!-- Quick Links -->
         <div class="quick-links">
@@ -189,4 +207,5 @@
         </div>
     </section>
 </body>
+
 </html>
