--- a/contact.html
+++ b/contact.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <!-- Linking CSS Files -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Favicon -->
     <link rel="icon" href="logo.jpg" type="image/x-icon">
 </head>
 <body class="main">
+    <!-- Navigation Bar -->
     <div class="nav">
         <img src="https://i.ibb.co/SdFFbYD/logo.jpg" alt="logo" border="0">
         <img src="https://i.ibb.co/Z2VPP5J/Asset-1-8.png" alt="Asset-1-8" border="0" class="logo">
         <a href="./homepage.html">Home</a>
-        <a href="./products.html">products</a>
+        <a href="./products.html">Products</a>
         <a href="./deals.html">Deals</a>
-        <a class="active"  href="./contact.html">Contact</a>
+        <a class="active" href="./contact.html">Contact</a>
         <a href="./about.html">About</a>
+        <!-- Search Bar -->
         <input type="text" placeholder="Search..">
     </div>
+
+    <!-- Main Content -->
     <div class="content">
         <section class="contact">
             <div class="contact-details">
                 <h2>Company Details</h2>
-                <p><strong>Phone: <br> </strong> (123) 456-7890</p>
-                <p> <strong>Email: <br> </strong> <a href="mailto:support@devops.com"> support@devops.com </a></p>
-                <p><strong>Address: <br> </strong> 1234 Main Street, Anytown, USA</p>
-                <p><strong>Hours: <br> </strong> Mon-Fri 9:00 AM - 5:00 PM</p>
+                <p><strong>Phone:<br></strong> (123) 456-7890</p>
+                <p><strong>Email:<br></strong> <a href="mailto:support@devops.com">support@devops.com</a></p>
+                <p><strong>Address:<br></strong> 1234 Main Street, Anytown, USA</p>
+                <p><strong>Hours:<br></strong> Mon-Fri 9:00 AM - 5:00 PM</p>
             </div>
             <div class="contact-form">
                 <h2>Contact Us</h2>
@@ -51,6 +57,8 @@
                 </form>
             </div>
         </section>
+
+        <!-- Footer Section -->
         <section class="footer">
             <!-- Quick Links -->
             <div class="quick-links">
