--- a/deals.html
+++ b/deals.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Deals</title>
+    <!-- Linking CSS Files -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="main">
+    <!-- Main Content -->
     <div class="content">
+        <!-- Navigation Bar -->
         <div class="nav">
             <img src="https://i.ibb.co/SdFFbYD/logo.jpg" alt="logo" border="0">
             <img src="https://i.ibb.co/Z2VPP5J/Asset-1-8.png" alt="Asset-1-8" border="0" class="logo">
             <a href="./homepage.html">Home</a>
-            <a href="./products.html">products</a>
+            <a href="./products.html">Products</a>
             <a class="active" href="./deals.html">Deals</a>
             <a href="./contact.html">Contact</a>
             <a href="./about.html">About</a>
             <input type="text" placeholder="Search..">
         </div>
+        
+        <!-- Deals Section -->
         <section class="deals">
             <h1>Current Deals</h1>
             <ul class="deal-list">
@@ -35,6 +40,8 @@
                 <li class="deal-item">Clearance: 70% Off Selected Items</li>
             </ul>
         </section>
+        
+        <!-- Footer Section -->
         <section class="footer">
             <!-- Quick Links -->
             <div class="quick-links">
