--- a/faq.html
+++ b/faq.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ's</title>
+    <!-- Linking External CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <div class="nav">
+        <img src="https://i.ibb.co/SdFFbYD/logo.jpg" alt="logo" border="0">
+        <img src="https://i.ibb.co/Z2VPP5J/Asset-1-8.png" alt="Asset-1-8" border="0" class="logo">
+        <a href="./homepage.html">Home</a>
+        <a href="./products.html">Products</a>
+        <a href="./deals.html">Deals</a>
+        <a href="./contact.html">Contact</a>
+        <a class="active" href="./faq.html">FAQ</a>
+        <a href="./about.html">About</a>
+        <input type="text" placeholder="Search..">
+    </div>
+    
+    <!-- Main Content -->
     <div class="content">
         <div class="faqcontainer">
             <h1>Frequently Asked Questions</h1>
@@ -32,9 +49,30 @@
             </div>
             <div class="faq">
                 <h2 class="question">6. How can I contact customer service?</h2>
-                <p class="answer">You can contact our customer service team via email at support@devops.com or by calling our hotline at (123) 456-7890. Our team is available Monday through Friday from 9 AM to 6 PM.</p>
+                <p class="answer">You can contact our customer service team via email at <a href="mailto:support@devops.com">support@devops.com</a> or by calling our hotline at (123) 456-7890. Our team is available Monday through Friday from 9 AM to 6 PM.</p>
             </div>
         </div>
     </div>
+    
+    <!-- Footer Section -->
+    <section class="footer">
+        <!-- Quick Links -->
+        <div class="quick-links">
+            <a href="./homepage.html">Home</a>
+            <a href="./faq.html">FAQ</a>
+            <a href="./about.html">About</a>
+            <a href="./products.html">Product Categories</a>
+            <a href="#">Return</a>
+            <a href="#">Sell</a>
+            <a href="#">Advertise</a>
+        </div>
+        <!-- Social Media Icons -->
+        <div class="social-icons">
+            <a href="#" class="fa fa-facebook" target="_blank"></a>
+            <a href="#" class="fa fa-twitter" target="_blank"></a>
+            <a href="#" class="fa fa-youtube" target="_blank"></a>
+            <a href="#" class="fa fa-instagram" target="_blank"></a>
+        </div>
+    </section>
 </body>
 </html>
