changed devops to dev squad

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About DEVOPS</title>
+    <title>About Dev Squad</title>
     <!-- Linking CSS Files -->
     <link rel="stylesheet" href="./about.css">
     <link rel="stylesheet" href="./style.css">
@@ -32,29 +32,29 @@
             <div class="container">
                 <!-- About Header -->
                 <header>
-                    <h1>About DEVOPS</h1>
-                    <p>Welcome to DEVOPS, your go-to eCommerce platform for innovative and reliable products. Founded by a passionate team dedicated to bringing you the best online shopping experience.</p>
+                    <h1>About Dev Squad</h1>
+                    <p>Welcome to Dev Squad, your go-to eCommerce platform for innovative and reliable products. Founded by a passionate team dedicated to bringing you the best online shopping experience.</p>
                 </header>
                 
                 <!-- Development Process Section -->
                 <section class="development-process exclude">
                     <h2>Development Process</h2>
-                    <p>The development of DEVOPS was a meticulous process driven by our commitment to excellence and customer satisfaction. Here's an overview of how we built our platform:</p>
+                    <p>The development of Dev Squad was a meticulous process driven by our commitment to excellence and customer satisfaction. Here's an overview of how we built our platform:</p>
                     <ol>
                         <li><strong>Market Research:</strong> We conducted extensive research to understand market needs, customer preferences, and existing gaps in the eCommerce sector.</li>
                         <li><strong>Planning and Strategy:</strong> Based on our research, we outlined our goals, defined our target audience, and developed a comprehensive business plan and strategy.</li>
                         <li><strong>Design and Development:</strong> Our team focused on creating a user-friendly and visually appealing design. We developed the platform using the latest technologies to ensure performance and security.</li>
                         <li><strong>Testing:</strong> Rigorous testing was conducted to identify and fix any bugs or issues. We tested the platform across different devices and browsers to ensure a seamless user experience.</li>
-                        <li><strong>Launch:</strong> After thorough testing and final adjustments, we launched DEVOPS with a focus on providing a reliable and engaging shopping experience for our users.</li>
+                        <li><strong>Launch:</strong> After thorough testing and final adjustments, we launched Dev Squad with a focus on providing a reliable and engaging shopping experience for our users.</li>
                         <li><strong>Continuous Improvement:</strong> Post-launch, we continue to gather feedback from our users and make iterative improvements to enhance our platform based on their needs and market trends.</li>
                     </ol>
-                    <p>The reasoning behind creating DEVOPS was to address the evolving needs of online shoppers by providing a platform that is not only comprehensive and user-friendly but also scalable and secure. Our mission is to deliver exceptional value and a superior shopping experience to our customers.</p>
+                    <p>The reasoning behind creating Dev Squad was to address the evolving needs of online shoppers by providing a platform that is not only comprehensive and user-friendly but also scalable and secure. Our mission is to deliver exceptional value and a superior shopping experience to our customers.</p>
                 </section>
                 
                 <!-- Founders Section -->
                 <section class="founders exclude">
                     <h2>Our Founders</h2>
-                    <p>DEVOPS was founded by a team of visionary individuals:</p>
+                    <p>Dev Squad was founded by a team of visionary individuals:</p>
                     <ul>
                         <li><strong>Oluwanifemi</strong></li>
                         <li><strong>Precious</strong></li>
@@ -68,7 +68,7 @@
                 <!-- Goals Section -->
                 <section class="goals exclude">
                     <h2>Our Goals</h2>
-                    <p>At DEVOPS, our primary goals are:</p>
+                    <p>At Dev Squad, our primary goals are:</p>
                     <ul>
                         <li>To provide a seamless and user-friendly shopping experience.</li>
                         <li>To offer a wide range of high-quality products at competitive prices.</li>
