--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,7 @@
             <div class="contact-details">
                 <h2>Company Details</h2>
                 <p><strong>Phone:<br></strong> (123) 456-7890</p>
-                <p><strong>Email:<br></strong> <a href="mailto:support@devops.com">support@devops.com</a></p>
+                <p><strong>Email:<br></strong> <a href="mailto:support@dev Squad.com">support@dev Squad.com</a></p>
                 <p><strong>Address:<br></strong> 1234 Main Street, Anytown, USA</p>
                 <p><strong>Hours:<br></strong> Mon-Fri 9:00 AM - 5:00 PM</p>
             </div>
