--- a/faq.html
+++ b/faq.html
@@ -28,8 +28,8 @@
         <div class="faqcontainer">
             <h1>Frequently Asked Questions</h1>
             <div class="faq">
-                <h2 class="question">1. What is DevOps Ecommerce?</h2>
-                <p class="answer">DevOps Ecommerce is your one-stop online shop for all your DevOps tools and resources. We offer a wide range of products to help you streamline and optimize your development and operations processes.</p>
+                <h2 class="question">1. What is Dev Squad Ecommerce?</h2>
+                <p class="answer">Dev Squad Ecommerce is your one-stop online shop for all your Dev Squad tools and resources. We offer a wide range of products to help you streamline and optimize your development and operations processes.</p>
             </div>
             <div class="faq">
                 <h2 class="question">2. How do I place an order?</h2>
@@ -49,7 +49,7 @@
             </div>
             <div class="faq">
                 <h2 class="question">6. How can I contact customer service?</h2>
-                <p class="answer">You can contact our customer service team via email at <a href="mailto:support@devops.com">support@devops.com</a> or by calling our hotline at (123) 456-7890. Our team is available Monday through Friday from 9 AM to 6 PM.</p>
+                <p class="answer">You can contact our customer service team via email at <a href="mailto:support@dev Squad.com">support@dev Squad.com</a> or by calling our hotline at (123) 456-7890. Our team is available Monday through Friday from 9 AM to 6 PM.</p>
             </div>
         </div>
     </div>
