--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Favicon -->
-    <link rel="icon" href="logo.jpg" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/SdFFbYD/logo.jpg" type="image/x-icon">
 </head>
 <body class="main">
     <!-- Navigation Bar -->
@@ -30,9 +30,9 @@
         <section class="contact">
             <div class="contact-details">
                 <h2>Company Details</h2>
-                <p><strong>Phone:<br></strong> (123) 456-7890</p>
+                <p><strong>Phone:<br></strong> +(234) 81 4680 1704</p>
                 <p><strong>Email:<br></strong> <a href="mailto:support@dev Squad.com">support@dev Squad.com</a></p>
-                <p><strong>Address:<br></strong> 1234 Main Street, Anytown, USA</p>
+                <p><strong>Address:<br></strong> PMB 4003, ILISHAN REMO, OGUN STATE, NIGERIA</p>
                 <p><strong>Hours:<br></strong> Mon-Fri 9:00 AM - 5:00 PM</p>
             </div>
             <div class="contact-form">
