--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Favicon -->
+    <link rel="icon" href="https://i.ibb.co/SdFFbYD/logo.jpg" type="image/x-icon">
 </head>
 <body class="main">
     <!-- Navigation Bar -->
@@ -18,15 +20,15 @@
         <a href="./products.html">Products</a>
         <a href="./deals.html">Deals</a>
         <a href="./contact.html">Contact</a>
-        <a class="active" href="./faq.html">FAQ</a>
         <a href="./about.html">About</a>
+        <!--Search Bar-->
         <input type="text" placeholder="Search..">
     </div>
     
     <!-- Main Content -->
     <div class="content">
         <div class="faqcontainer">
-            <h1>Frequently Asked Questions</h1>
+            <h1>FREQUENTLY ASKED QUESTIONS</h1><br><br>
             <div class="faq">
                 <h2 class="question">1. What is Dev Squad Ecommerce?</h2>
                 <p class="answer">Dev Squad Ecommerce is your one-stop online shop for all your Dev Squad tools and resources. We offer a wide range of products to help you streamline and optimize your development and operations processes.</p>
@@ -49,7 +51,7 @@
             </div>
             <div class="faq">
                 <h2 class="question">6. How can I contact customer service?</h2>
-                <p class="answer">You can contact our customer service team via email at <a href="mailto:support@dev Squad.com">support@dev Squad.com</a> or by calling our hotline at (123) 456-7890. Our team is available Monday through Friday from 9 AM to 6 PM.</p>
+                <p class="answer">You can contact our customer service team via email at <a href="mailto:support@dev Squad.com">support@dev Squad.com</a> or by calling our hotline at +(234) 81 4680 1704. Our team is available Monday through Friday from 9 AM to 6 PM.</p>
             </div>
         </div>
     </div>
