--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Favicon -->
-    <link rel="icon" href="logo.jpg" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/SdFFbYD/logo.jpg" type="image/x-icon">
 </head>
 
 <body class="main">
@@ -38,14 +38,14 @@
         <div class="grid-container">
             <!-- Electronics Section -->
             <div class="grid-item">
-                <img src="https://i.ibb.co/Ms7NqHV/1.jpg" alt="1" border="0">
+                <img src="https://i.ibb.co/R7vyvdw/2.jpg" alt="1" border="0">
                 <h2>UltraFast Laptop</h2>
                 <p>Experience lightning speed with the new UltraFast Laptop. Perfect for gaming and professional work.</p>
                 <span>$999<sup>99</sup></span>
                 <a href="./checkout.html"><button>Buy Now</button></a>
             </div>
             <div class="grid-item">
-                <img src="https://i.ibb.co/R7vyvdw/2.jpg" alt="2" border="0">
+                <img src="https://i.ibb.co/Ms7NqHV/1.jpg" alt="2" border="0">
                 <h2>Smartphone X Pro</h2>
                 <p>The latest Smartphone X Pro with an exceptional camera and long battery life.</p>
                 <span>$799<sup>99</sup></span>
