--- a/products.html
+++ b/products.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Favicon -->
+    <link rel="icon" href="https://i.ibb.co/SdFFbYD/logo.jpg" type="image/x-icon">
 </head>
 <body class="main">
     <div class="content">
+        <!--Navigation Bar-->
         <div class="nav">
             <img src="https://i.ibb.co/SdFFbYD/logo.jpg" alt="logo" border="0">
             <img src="https://i.ibb.co/Z2VPP5J/Asset-1-8.png" alt="Asset-1-8" border="0" class="logo">
@@ -18,8 +21,10 @@
             <a href="./deals.html">Deals</a>
             <a href="./contact.html">Contact</a>
             <a href="./about.html">About</a>
+            <!--Search Bar-->
             <input type="text" placeholder="Search..">
         </div>
+        <!--Product List-->
         <div class="main">
             <section class="product-categories">
                 <h1>Product Categories</h1>
